arm: dts: qcom: msm8212-lumia-common: Alias the storages
Without this, sometimes SDHC_1 will be seen as the EMMC and vice versa.

Signed-off-by: Jack Matthews <jack@matthews-net.org.uk>

--- a/arch/arm/boot/dts/qcom-msm8212-msft-lumia-common.dtsi
+++ b/arch/arm/boot/dts/qcom-msm8212-msft-lumia-common.dtsi
@@ -22,6 +22,11 @@
 		ranges;
 	};
 
+	aliases {
+		mmc0 = &sdhc_1; /* eMMC */
+		mmc1 = &sdhc_2; /* MicroSD */
+	};
+
 	usb_vbus: extcon-usb-dummy {
 		compatible = "linux,extcon-usb-dummy";
 	};
