--- a/arch/arm/boot/dts/qcom-msm8212.dtsi
+++ b/arch/arm/boot/dts/qcom-msm8212.dtsi
@@ -458,7 +458,7 @@
 		};
 
 		saw_l2: power-controller@f9012000 {
-			compatible = "qcom,msm8226-saw2-v2.1-cpu", "qcom,saw2";
+			compatible = "qcom,saw2";
 			reg = <0xf9012000 0x1000>;
 			regulator;
 		};
